--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^12.3.4",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
   },
